...
        android:paddingStart="@dimen/screen_h_padding"
        android:paddingTop="12dp"
        android:paddingEnd="@dimen/screen_h_padding"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/btnContinue"
            style="@style/Widget.HD.PrimaryButton"
            android:text="@string/continue_action"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</LinearLayout>

