...
    <TextView
        android:id="@+id/btnAllow"
        style="@style/Widget.HD.PrimaryButton"
        android:text="@string/allow_and_continue" />

    <TextView
        android:id="@+id/btnNotNow"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/not_now"
...
