...
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/bg_intro_pip" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="8dp"
            android:text="@string/skip"
...
