<?xml version="1.0" encoding="utf-8"?>
<!-- One zoom step above the capture-mode strip. -->
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/zoom_chip"
    android:layout_height="@dimen/zoom_chip"
    android:background="@drawable/bg_round_scrim_50"
    android:fontFamily="@font/ibm_plex_mono_regular"
    android:gravity="center"
    android:textColor="@color/dc_text"
    android:textSize="13sp"
    tools:text="1×" />
